docs: refresh README + user-guide + tutorial for landed features
Sweep across recently landed user-facing tracks that had no entry in
the top-level docs:

- Apache Spark backend (v1.25 § 9.5 Phases A-F, Lakehouse L.2 Delta,
  Phase G Catalog/Hive, Phase M MLlib): README backends table + new
  Spark column in "Data processing" + 6 example rows; user-guide §13
  with sub-sections covering front-matter keys, sql blocks, @SqlFn
  UDFs, Phase E encoder shim, Structured Streaming, Delta, Hive +
  @TempView, MLlib, cluster submission, caveats; tutorial.md Tutorial 2
  walking through Dataset[T] -> @SqlFn -> @TempView -> Delta round trip.
- WebAssembly backend (v1.27 Phase 5): backends row + Browser & UI
  row + user-guide §14 + 5 example rows.
- Frontend Framework SPI (v1.18 A2-A5): React, Vue, Solid, Custom
  backends with shared ShowSignal/ToggleSignal/ForSignal primitives -
  backends row + Browser & UI rows + user-guide §15 + frontend example
  pointers.
- Frontend Toolkit (v1.18 B+): Forms, Routing, Widgets v2, Table -
  Browser & UI row + user-guide §16 + spec doc link.
- Cluster management (v1.23): Bully election, phi-accrual FD,
  federation, Raft, ZooKeeper - new "Cluster" feature table in README
  + user-guide §17 + spec doc links.
- x402 micropayments + Blockchain SPI: WC v2 relay, Solana Wallet
  Standard, ERC-4337 v0.7, Cardano CIP-8/Scalus, noble-curves crypto -
  new "Blockchain, wallets, and micropayments" feature table +
  user-guide §18 + 3 example rows.
- Documentation index: added pointers for spark-streaming.md,
  frontend-framework-spi-plan.md, frontend-toolkit-spec.md,
  cluster-management.md, x402.md, blockchain-spi.md, browser-sql.md.
- Tutorial 1 renamed for the two-tutorial layout; README links updated
  with the heading anchors.